Add support for local JWT

--- a/GroceryAPI/GroceryAPI.csproj
+++ b/GroceryAPI/GroceryAPI.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>a529fc2d-aa18-4caf-aac9-31d4fd3c7fe5</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
