--- a/GroceryAPI/appsettings.Development.json
+++ b/GroceryAPI/appsettings.Development.json
@@ -4,5 +4,18 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Authentication": {
+    "Schemes": {
+      "Bearer": {
+        "ValidAudiences": [
+          "http://localhost:37362",
+          "https://localhost:44311",
+          "http://localhost:5113",
+          "https://localhost:7013"
+        ],
+        "ValidIssuer": "dotnet-user-jwts"
+      }
+    }
   }
 }
